<resources>
    <string name="app_name">Alert</string>
    <!--    <string name="facebook_app_id">1290151271145918</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb1290151271145918</string>-->

    <string name="facebook_app_id">3199087440133597</string>
    <string name="fb_login_protocol_scheme">fb3199087440133597</string>
    <string name="add_menu_title">Dodawanie wydarzenia</string>

    <string name="add_title_hint">Tytuł</string>
    <string name="add_desc_hint">Opis</string>
    <string name="add_location_text">Lokalizacja</string>
    <string name="add_image_desc">Zdjęcie</string>
    <string name="add_category_image_desc">Pokaż kategorię</string>
    <string name="add_category_text">Kategoria</string>
    <string name="add_title_error">Musisz podać tytuł</string>
    <string name="add_desc_error">Musisz podać opis</string>
    <string name="add_category_error">Musisz podać kategorię</string>
    <string name="add_location_error">Musisz podać lokalizację</string>
    <string name="add_location_pin_text">Lokalizacja</string>
    <string name="Add_toload_desc">obraz od użytkownika</string>
    <string name="add_dialog_title">Wybierz kategorię</string>
    <string name="add_dialog_positive">OK</string>
    <string name="add_dialog_negative">Anuluj</string>
    <string name="add_category_hint">Kategoria</string>
    <string name="add_addphoto_text">Dodaj zdjęcie</string>

    <string name="detail_image_desc">Obraz wydarzenia</string>
    <string name="detail_menu_title">Szczegóły wydarzenia</string>

    <string name="LocationPicker_image_desc">Pinezka</string>
    <string name="LocationPicker_button_text">Wybierz</string>

    <string name="Event_image_desc">Obraz wydarzenia</string>

    <string name="Login_textView_text">Zaloguj się</string>

    <string name="detail_image_title">Opis</string>
    <string name="detail_localisacion_title">Lokalizacja</string>
    <string name="detail_bottombar_text">Czy informacja była pomocna?</string>

    <string name="filter_fitrcateegory">Filtruj Kategorię</string>
    <string name="filter_maxdistance">Maksymalna odległość</string>
    <string name="filter_resetbutton_text">Resetuj</string>
    <string name="filter_confirm_button_text">Zatwierdź</string>
    <string name="filter_title">Filtry</string>
    <string name="filter_dostance_title">Podaj Maksymalną odległość</string>
    <string name="progres_text">Proszę czekać ...</string>
    <string name="sign_out">Wyloguj się</string>

    <string name="internet_dialog_title">"Brak Połączenia z Internetem"</string>
    <string name="internet_dialog_text">"Nie wykryto połączenia z Internetem. Czy chesz je włączyć?"</string>

    <string name="splash_load_text">POBIERANIE WYDARZEŃ</string>

    <string name="conError_desc_text">Wykryto następujące problemy z połączeniem</string>
    <string name="conError_internet_text">Brak Internetu</string>
    <string name="conError_connectButton_text">Połącz</string>
    <string name="conError_GPS_text">Brak połączenia GPS</string>

    <string name="Login_logo_desc">Logo</string>
    <string name="login_facebookButton_text">Zaloguj się z Facebook</string>
    <string name="Login_googleButton_text">Zaloguj się z Google</string>
    <string name="Login_twitterButton_text">Zaloguj się z Twitter</string>
    <string name="report_event_title">Zgłoś wydarzenie</string>
    <string name="report_buttonNegative_text">Anuluj</string>
    <string name="report_buttonPositive_text">Zgłoś</string>
    <string name="likebar_like_text">Lubię</string>
    <string name="likebar_dislike_text">Nie Lubię</string>
    <string name="profile_reputation_text">Twoja reputacja</string>
    <string name="profile_statistic_text">Statystyki</string>
    <string name="profile_added_text">Dodanych wydarzeń</string>
    <string name="profile_rated_text">Ocenionych wydarzeń</string>
    <string name="profile_reported_text">Zgłoszonych wydarzeń</string>
    <string name="profile_service_text">Zalogowano przez</string>
    <string name="login_deleteButton_text">USUŃ KONTO</string>
    <string name="login_delete_text">Usuń konto:</string>

</resources>
