<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="280dp"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Zgłoś wydarzenie"
            android:layout_margin="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:outlineProvider="bounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reportCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/add_category_hint"
                android:textColorHint="@color/colorPrimary"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reportCategory_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_expand_more_24px"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/add_category_image_desc"
                app:layout_constraintBottom_toBottomOf="@+id/reportCategory"
                app:layout_constraintEnd_toEndOf="@+id/reportCategory"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/reportCategory"
                app:layout_constraintTop_toTopOf="@+id/reportCategory" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout

            android:outlineProvider="bounds"
            android:id="@+id/lay"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/add_desc_hint"
            android:textColorHint="@color/colorPrimary"
            app:boxBackgroundColor="#00EC0000"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:outlineProvider="bounds"
                android:id="@+id/desc2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="150dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <Button
                android:id="@+id/report_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Anuluj"
                android:textColor="@color/design_default_color_error" />

        <Button
                android:id="@+id/report_ok"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Zgłoś" />

    </LinearLayout>
</LinearLayout>